# GameServer

./: .gitignore  CMakeLists.txt  README.md
CSharp/: Packet000Base.cs  PacketHandler.cs  PacketManager.cs  RealtimePacket.cs
src/CoreLib/: CMakeLists.txt
src/CoreLib/src/: CoreLib_Singleton.cpp  CoreLib_Singleton.h  Singleton.cpp  pch.h
src/CoreLib/src/Job/: GlobalQueue.cpp  Job.h  JobQueue.cpp  JobQueue.h
src/CoreLib/src/Network/: Acceptor.cpp  Acceptor.h  PacketHeader.h  SendBuffer.cpp  SendBuffer.h  Session.cpp  Session.h  UDPSession.cpp  UDPSession.h  UDPSocket.cpp  UDPSocket.h
src/CoreLib/src/Thread/: TLS.cpp  TLS.h  ThreadManager.cpp
src/CoreLib/src/Util/: LogManager.cpp  LogManager.h
src/DummyClient/: CMakeLists.txt
src/DummyClient/src/: DummyClient_Singleton.cpp  DummyClient_Singleton.h  PacketManager.cpp  PacketManager.h  Protocols.h  pch.cpp  pch.h
src/DummyClient/src/Client/: Client.cpp
src/DummyClient/src/Contents/Base/: ClientBase.cpp  ClientBase.h
src/DummyClient/src/Contents/GameObject/: GameObjectClient.cpp  GameObjectClient.h
src/DummyClient/src/Main/: DummyClient.cpp
src/DummyClient/src/Protocol/: Packet_000_Base.pb.cc  Packet_000_Base.pb.h  Packet_001_GameObject.pb.cc  Packet_001_GameObject.pb.h  Packet_002_FPS.pb.cc  Packet_002_FPS.pb.h
src/DummyClient/src/Session/: GameSession.cpp  GameSession.h
src/ProtoBuf/ProtoFiles/: Packet_000_Base.proto  Packet_001_GameObject.proto  Packet_002_FPS.proto
src/ProtoBuf/Templates/: PacketHandler.cs  PacketHandler.h  PacketManager.cpp  PacketManager.cs  PacketManager.h  Protocols.h  RealTimePacket.cs
src/Server/: CMakeLists.txt
src/Server/Templates/: PacketManager.cpp  PacketManager.h
src/Server/src/: Enums.h  PacketManager.cpp  PacketManager.h  Protocols.h  Server_Singleton.cpp  Server_Singleton.h  pch.cpp  pch.h
src/Server/src/Contents/Base/: ClientBase.cpp  ClientBase.h  ClientManager.h  PacketHandler.h  RoomBase.cpp  RoomBase.h
src/Server/src/Contents/FPS/: DebugDrawer.h  FPSClient.cpp  FPSClient.h  FPSObject.cpp  FPSObject.h  FPSRoom.cpp  FPSRoom.h
src/Server/src/Contents/GameObject/: GameObject.h  GameObjectClient.cpp  GameObjectClient.h  GameObjectRoom.cpp  GameObjectRoom.h
src/Server/src/HTTP/: HttpServer.cpp  HttpServer.h
src/Server/src/Main/: GameServer.cpp  Server.cpp
src/Server/src/Network/: GameSession.cpp  GameUDPSocket.cpp  GameUDPSocket.h
src/Server/src/Protocol/: Packet_000_Base.pb.cc  Packet_000_Base.pb.h  Packet_001_GameObject.pb.cc  Packet_001_GameObject.pb.h  Packet_002_FPS.pb.cc  Packet_002_FPS.pb.h
src/Server/src/Session/: GameSession.cpp  GameSession.h
src/Server/src/Util/: Convert.h  LogManager.h
